# gmafell

./: .gitignore  README.md  gmafell.doap  meson.build  meson_options.txt
data/: gmafell.gresource.xml  meson.build
data/ui/: window.ui
src/: gmfl-application.c  gmfl-application.h  gmfl-debug.h.in  gmfl-log.c  gmfl-log.h  gmfl-types.h  gmfl-window.c  gmfl-window.h  main.c  meson.build
